<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".FormActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_identitas_mahasiswa"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="8dp"
        android:textAlignment="center"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_avatar"
        android:layout_marginVertical="8dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="8dp">

            <EditText
                android:id="@+id/etAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/alamat"
                android:inputType="text"/>
            <EditText
                android:id="@+id/etTelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/nomor_telepon"
                android:inputType="number"/>
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/password"
                android:inputType="textPassword" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Jenis kelamin"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textSize="14sp"/>
            <RadioGroup
                android:id="@+id/rbGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rbLaki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Laki-laki"/>
                <RadioButton
                    android:id="@+id/rbPerempuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Perempuan"/>
            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kelas"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textSize="14sp"/>
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/kelas"
                android:layout_marginVertical="4dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Organisasi UKM"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textSize="14sp"/>
            <CheckBox
                android:id="@+id/cbAMCC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AMCC"/>
            <CheckBox
                android:id="@+id/cbHIMSI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HIMSI"/>
            <CheckBox
                android:id="@+id/cbKOMA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="KOMA"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Other inputs"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textSize="14sp"/>
            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="Non-Aktif"
                android:layout_marginVertical="4dp"
                android:textOn="Active" />
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp" />
            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp" />
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:layout_marginVertical="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Horizontal Scroll"
                android:layout_marginVertical="4dp"
                android:textSize="14sp"/>
            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button"
                        android:layout_marginHorizontal="4dp"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button"
                        android:layout_marginHorizontal="4dp"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button"
                        android:layout_marginHorizontal="4dp"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button"
                        android:layout_marginHorizontal="4dp"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button"
                        android:layout_marginHorizontal="4dp"/>
                </LinearLayout>
            </HorizontalScrollView>
            <Button
                android:id="@+id/btnSimpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Simpan" />
            <Button
                android:id="@+id/btnHapus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hapus" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>